--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de Tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /* background-color: black;
             background-image: url(img/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed; */
+
+            /*  Shorthand - background 
+            color > image > position > repeat > [size] > attachment*/
+
+            background: black url(img/wallpaper002.jpg) center center/cover no-repeat fixed;
+
+            /* background-size: cover; */
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -29,7 +37,22 @@
     <main>
         <h1>Teste de Imagens de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores ut quibusdam consequatur ea explicabo voluptatibus impedit itaque iure accusamus. Dolore praesentium ut sint nesciunt reiciendis porro voluptatibus eligendi voluptatum temporibus.
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, ad eligendi quaerat magnam accusantium eos explicabo aliquam natus dolorem nobis perspiciatis sunt labore velit quis laborum excepturi voluptate adipisci rem.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, ad eligendi quaerat magnam accusantium eos explicabo aliquam natus dolorem nobis perspiciatis sunt labore velit quis laborum excepturi voluptate adipisci rem.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores ut quibusdam consequatur ea explicabo voluptatibus impedit itaque iure accusamus. Dolore praesentium ut sint nesciunt reiciendis porro voluptatibus eligendi voluptatum temporibus.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, ad eligendi quaerat magnam accusantium eos explicabo aliquam natus dolorem nobis perspiciatis sunt labore velit quis laborum excepturi voluptate adipisci rem.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores ut quibusdam consequatur ea explicabo voluptatibus impedit itaque iure accusamus. Dolore praesentium ut sint nesciunt reiciendis porro voluptatibus eligendi voluptatum temporibus.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, ad eligendi quaerat magnam accusantium eos explicabo aliquam natus dolorem nobis perspiciatis sunt labore velit quis laborum excepturi voluptate adipisci rem.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores ut quibusdam consequatur ea explicabo voluptatibus impedit itaque iure accusamus. Dolore praesentium ut sint nesciunt reiciendis porro voluptatibus eligendi voluptatum temporibus.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, ad eligendi quaerat magnam accusantium eos explicabo aliquam natus dolorem nobis perspiciatis sunt labore velit quis laborum excepturi voluptate adipisci rem.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores ut quibusdam consequatur ea explicabo voluptatibus impedit itaque iure accusamus. Dolore praesentium ut sint nesciunt reiciendis porro voluptatibus eligendi voluptatum temporibus.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, ad eligendi quaerat magnam accusantium eos explicabo aliquam natus dolorem nobis perspiciatis sunt labore velit quis laborum excepturi voluptate adipisci rem.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores ut quibusdam consequatur ea explicabo voluptatibus impedit itaque iure accusamus. Dolore praesentium ut sint nesciunt reiciendis porro voluptatibus eligendi voluptatum temporibus.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, ad eligendi quaerat magnam accusantium eos explicabo aliquam natus dolorem nobis perspiciatis sunt labore velit quis laborum excepturi voluptate adipisci rem.
         </p>
     </main>
 </body>
