Acrescentando desafios e novos exercícios.

--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -12,6 +12,7 @@
     <!-- 
         ANATOMIA PARA TABELAS GRANDES
         TABLE
+            CAPTION
             THEAD
                 TR, TD, TH
             TBODY
@@ -20,11 +21,12 @@
                 TR, TD, TH
      -->
      <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
-                <th>% da pop. total</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 100px;">População</th>
+                <th scope="col" style="width: 90px;">% da pop. total</th>
             </tr>
         </thead>
 
@@ -169,10 +171,27 @@
 
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td><strong>213 317 639</strong></td>
             </tr>
         </tfoot>
      </table>
+     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque quia fugit debitis qui quibusdam commodi mollitia dolore, libero, facilis, cumque ab earum a minima sit. Ab aspernatur numquam voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur officia labore quidem dicta rem voluptatibus laborum quae officiis et perspiciatis. Tempore eum laborum tempora, magnam omnis eaque unde repellendus sequi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est quidem impedit distinctio laboriosam. Corrupti in alias, inventore sequi voluptatem labore dicta modi ullam cum optio porro facere eum! Dolore, consequatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, consectetur itaque? Esse, ipsum nesciunt illo commodi rerum adipisci facere quibusdam quod mollitia, omnis voluptatibus voluptatum, vero exercitationem odio incidunt dicta.</p>
+
+     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque quia fugit debitis qui quibusdam commodi mollitia dolore, libero, facilis, cumque ab earum a minima sit. Ab aspernatur numquam voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur officia labore quidem dicta rem voluptatibus laborum quae officiis et perspiciatis. Tempore eum laborum tempora, magnam omnis eaque unde repellendus sequi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est quidem impedit distinctio laboriosam. Corrupti in alias, inventore sequi voluptatem labore dicta modi ullam cum optio porro facere eum! Dolore, consequatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, consectetur itaque? Esse, ipsum nesciunt illo commodi rerum adipisci facere quibusdam quod mollitia, omnis voluptatibus voluptatum, vero exercitationem odio incidunt dicta.</p>
+
+     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque quia fugit debitis qui quibusdam commodi mollitia dolore, libero, facilis, cumque ab earum a minima sit. Ab aspernatur numquam voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur officia labore quidem dicta rem voluptatibus laborum quae officiis et perspiciatis. Tempore eum laborum tempora, magnam omnis eaque unde repellendus sequi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est quidem impedit distinctio laboriosam. Corrupti in alias, inventore sequi voluptatem labore dicta modi ullam cum optio porro facere eum! Dolore, consequatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, consectetur itaque? Esse, ipsum nesciunt illo commodi rerum adipisci facere quibusdam quod mollitia, omnis voluptatibus voluptatum, vero exercitationem odio incidunt dicta.</p>
+
+     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque quia fugit debitis qui quibusdam commodi mollitia dolore, libero, facilis, cumque ab earum a minima sit. Ab aspernatur numquam voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur officia labore quidem dicta rem voluptatibus laborum quae officiis et perspiciatis. Tempore eum laborum tempora, magnam omnis eaque unde repellendus sequi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est quidem impedit distinctio laboriosam. Corrupti in alias, inventore sequi voluptatem labore dicta modi ullam cum optio porro facere eum! Dolore, consequatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, consectetur itaque? Esse, ipsum nesciunt illo commodi rerum adipisci facere quibusdam quod mollitia, omnis voluptatibus voluptatum, vero exercitationem odio incidunt dicta.</p>
+
+     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque quia fugit debitis qui quibusdam commodi mollitia dolore, libero, facilis, cumque ab earum a minima sit. Ab aspernatur numquam voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur officia labore quidem dicta rem voluptatibus laborum quae officiis et perspiciatis. Tempore eum laborum tempora, magnam omnis eaque unde repellendus sequi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est quidem impedit distinctio laboriosam. Corrupti in alias, inventore sequi voluptatem labore dicta modi ullam cum optio porro facere eum! Dolore, consequatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, consectetur itaque? Esse, ipsum nesciunt illo commodi rerum adipisci facere quibusdam quod mollitia, omnis voluptatibus voluptatum, vero exercitationem odio incidunt dicta.</p>
+
+     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque quia fugit debitis qui quibusdam commodi mollitia dolore, libero, facilis, cumque ab earum a minima sit. Ab aspernatur numquam voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur officia labore quidem dicta rem voluptatibus laborum quae officiis et perspiciatis. Tempore eum laborum tempora, magnam omnis eaque unde repellendus sequi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est quidem impedit distinctio laboriosam. Corrupti in alias, inventore sequi voluptatem labore dicta modi ullam cum optio porro facere eum! Dolore, consequatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, consectetur itaque? Esse, ipsum nesciunt illo commodi rerum adipisci facere quibusdam quod mollitia, omnis voluptatibus voluptatum, vero exercitationem odio incidunt dicta.</p>
+
+     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque quia fugit debitis qui quibusdam commodi mollitia dolore, libero, facilis, cumque ab earum a minima sit. Ab aspernatur numquam voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur officia labore quidem dicta rem voluptatibus laborum quae officiis et perspiciatis. Tempore eum laborum tempora, magnam omnis eaque unde repellendus sequi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est quidem impedit distinctio laboriosam. Corrupti in alias, inventore sequi voluptatem labore dicta modi ullam cum optio porro facere eum! Dolore, consequatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, consectetur itaque? Esse, ipsum nesciunt illo commodi rerum adipisci facere quibusdam quod mollitia, omnis voluptatibus voluptatum, vero exercitationem odio incidunt dicta.</p>
+
+     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque quia fugit debitis qui quibusdam commodi mollitia dolore, libero, facilis, cumque ab earum a minima sit. Ab aspernatur numquam voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur officia labore quidem dicta rem voluptatibus laborum quae officiis et perspiciatis. Tempore eum laborum tempora, magnam omnis eaque unde repellendus sequi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est quidem impedit distinctio laboriosam. Corrupti in alias, inventore sequi voluptatem labore dicta modi ullam cum optio porro facere eum! Dolore, consequatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, consectetur itaque? Esse, ipsum nesciunt illo commodi rerum adipisci facere quibusdam quod mollitia, omnis voluptatibus voluptatum, vero exercitationem odio incidunt dicta.</p>
+
+     
 </body>
 </html>
