--- a/exercicios/ex023/tabela005.html
+++ b/exercicios/ex023/tabela005.html
@@ -4,9 +4,91 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercício de Tabelas</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        table {
+            width: 500px;
+            border-collapse: collapse;
+        }
+
+        caption {
+            font-size: 1.3em;
+            font-weight: bold;
+            padding: 8px;
+        }
+
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+        }
+
+        .cnome{
+            background-color: aquamarine;
+        }
+
+        .cgrupo {
+            background-color: lightblue;
+        }
+    </style>
 </head>
 <body>
+    <h1>Exercício de Tabelas</h1> 
     
+    <table>
+        <colgroup>
+            <col class="cnome">
+            <col class="cgrupo" span="2">
+            <col class="cprofissao">
+        </colgroup>
+
+        <caption>Cadastro</caption>
+        <tr>
+            <th scope="col">Nome</th>
+            <th scope="col">Sexo</th>
+            <th scope="col">Idade</th>
+            <th scope="col">Profissão</th>
+        </tr>
+        <tr>
+            <td>Ana Maria</td>
+            <td>F</td>
+            <td>25</td>
+            <td>Jornalista</td>
+        </tr>
+
+        <tr>
+            <td>Hélio</td>
+            <td>M</td>
+            <td>28</td>
+            <td>Programador</td>
+        </tr>
+        <tr>
+            <td>Cláudio</td>
+            <td>M</td>
+            <td>35</td>
+            <td>Mecânico</td>
+        </tr>
+        <tr class="">
+            <td>João</td>
+            <td>M</td>
+            <td>50</td>
+            <td>Padeiro</td>
+        </tr>
+        <tr class="">
+            <td>Neide</td>
+            <td>F</td>
+            <td>26</td>
+            <td>Professora</td>
+        </tr>
+        <tr>
+            <td>Neymar</td>
+            <td>M</td>
+            <td>29</td>
+            <td>Jogador</td>
+        </tr>
+    </table>
 </body>
 </html>
